--- a/public/css/teams/main.css
+++ b/public/css/teams/main.css
@@ -334,4 +334,12 @@ img {
             transform: scale(1.3);
   }
 }
+
+@media screen and (max-width: 1100px) {
+  .streamers {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
 /*# sourceMappingURL=main.css.map */
